# arxiv-rag-qa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.dvc/: config
conf/: config.yaml
conf/chunking/: chunking.yaml
conf/dag/: dag.yaml
conf/download/: download.yaml
conf/embeddings/: embeddings.yaml
conf/generator/: generator.yaml
conf/qdrant_setup/: qdrant_setup.yaml
conf/retriever/: retriever.yaml
dags/: download_data.py  rag.py
data/: raw.dvc
data/processed/: json.dvc
notebooks/: EDA.ipynb
src/arxiv_rag_qa/api/: download_model.py  embeddings_model.py  main.py  parse_model.py  process_model.py  qdrant_model.py
src/arxiv_rag_qa/data/: chunking.py  download_data.py  generate_embeddings.py  parse_pdf_to_json.py
src/arxiv_rag_qa/rag/: generator.py  pipeline.py  qdrant_manager.py  retriever.py  run.py  setup_qdrant.py
