[project]
name = "arxiv-rag-qa"
version = "0.1.0"
description = "Question answering system for scientific articles using RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.66.0",
    "dvc-s3>=3.2.2",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "torch>=2.2.2",
    "tqdm>=4.67.1",
    "boto3>=1.42.19",
    "mlflow>=3.8.1",
    "apache-airflow==2.10.1",
]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version >= '3.9'"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-builtins
    "A",
    # flake8-return
    "RET",
    # flake8-use-pathlib
    "PTH",
    # flynt
    "FLY",
    # mccabe
    "C90",
    # NumPy-specific rules
    "NPY",
    # pep8-naming
    "N",
    # Ruff-specific rules
    "RUF",
    # Pylint - very strict, may be use when have enough time
    "PL",
    # refurb - also may be overwhelming
    "FURB",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

pycodestyle = { max-doc-length = 100 }

[tool.ruff.lint.pylint]
max-args = 10  # default is 5

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

docstring-code-format = true
