[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-rag-qa"
version = "0.1.0"
description = "Question answering system for scientific articles using RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy==1.26.4",
  "pandas>=2.3.3",
  "tqdm>=4.67.1",
  "seaborn>=0.13.2",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.117.1",
  "uvicorn[standard]",
  "pydantic>=2.12.5",
  "redis>=7.1.0",
  "requests>=2.32.5",
  "pymupdf>=1.26.7",
  "sentence-transformers>=5.2.0",
]

airflow = [
  "boto3>=1.42.19",
  "mlflow-skinny>=3.8.1",
  "hydra-core>=1.3.2",
]

ml = [
  "torch>=2.2.2",
  "sentence-transformers>=5.2.0",
  "nltk>=3.9.2",
]

dev = [
  "dvc[s3]>=3.66.0",
  "dvc-s3>=3.2.2",
  "fire>=0.7.1",
  "pre-commit>=4.5.1",
  "ruff>=0.14.10",
  "apache-airflow==2.10.1",
  "ipykernel>=7.1.0",
  "qdrant-client>=1.12.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version >= '3.9'"
]

[tool.codespell]
skip = "*.ipynb"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-builtins
    "A",
    # flake8-return
    "RET",
    # flake8-use-pathlib
    "PTH",
    # flynt
    "FLY",
    # mccabe
    "C90",
    # NumPy-specific rules
    "NPY",
    # pep8-naming
    "N",
    # Ruff-specific rules
    "RUF",
    # Pylint - very strict, may be use when have enough time
    "PL",
    # refurb - also may be overwhelming
    "FURB",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

pycodestyle = { max-doc-length = 100 }

[tool.ruff.lint.pylint]
max-args = 10  # default is 5
max-statements = 60

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

docstring-code-format = true
